docs: update things

--- a/package.json
+++ b/package.json
@@ -42,22 +42,23 @@
         "@okikio/native": "^3.0.1",
         "@swup/preload-plugin": "^1.0.3",
         "@swup/scroll-plugin": "^1.1.0",
-        "swup": "^2.0.14"
+        "lite-youtube-embed": "^0.2.0",
+        "swup": "^2.0.15"
     },
     "devDependencies": {
-        "@csstools/postcss-sass": "^4.0.0",
-        "@fullhuman/postcss-purgecss": "^4.0.3",
-        "autoprefixer": "^10.4.0",
-        "browser-sync": "^2.27.7",
-        "cloudinary": "^1.27.1",
-        "del": "^6.0.0",
-        "dotenv": "^10.0.0",
-        "esbuild": "^0.13.12",
-        "fibers": "^5.0.0",
+        "@csstools/postcss-sass": "^5.0.1",
+        "@fullhuman/postcss-purgecss": "^4.1.3",
+        "autoprefixer": "^10.4.7",
+        "browser-sync": "^2.27.10",
+        "cloudinary": "^1.30.0",
+        "del": "^6.1.1",
+        "dotenv": "^16.0.1",
+        "esbuild": "^0.14.47",
+        "fibers": "^5.0.1",
         "gulp": "^4.0.2",
-        "gulp-esbuild": "^0.9.1",
+        "gulp-esbuild": "^0.10.3",
         "gulp-if": "^3.0.0",
-        "gulp-minify-inline-json": "^1.4.4",
+        "gulp-minify-inline-json": "^1.4.10",
         "gulp-plumber": "^1.2.1",
         "gulp-postcss": "^9.0.1",
         "gulp-pug": "^5.0.0",
@@ -65,14 +66,14 @@
         "gulp-sitemap": "^8.0.0",
         "gulp-size": "^4.0.1",
         "gulp-terser": "^2.1.0",
-        "gulp-typescript": "^6.0.0-alpha.1",
-        "postcss": "^8.3.11",
-        "postcss-csso": "^5.0.1",
+        "gulp-typescript": "6.0.0-alpha.1",
+        "postcss": "^8.4.14",
+        "postcss-csso": "^6.0.0",
         "postcss-easings": "^3.0.1",
-        "postcss-easy-import": "^3.0.0",
-        "postcss-scss": "^4.0.2",
-        "sass": "^1.43.4",
-        "tailwindcss": "^2.2.19",
-        "typescript": "^4.4.4"
+        "postcss-easy-import": "^4.0.0",
+        "postcss-scss": "^4.0.4",
+        "sass": "^1.52.3",
+        "tailwindcss": "^3.1.4",
+        "typescript": "^4.7.4"
     }
 }
