--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
         "del": "^6.1.1",
         "dotenv": "^16.0.1",
         "esbuild": "^0.14.47",
-        "fibers": "^5.0.1",
         "gulp": "^4.0.2",
         "gulp-esbuild": "^0.10.3",
         "gulp-if": "^3.0.0",
@@ -70,9 +69,9 @@
         "postcss": "^8.4.14",
         "postcss-csso": "^6.0.0",
         "postcss-easings": "^3.0.1",
-        "postcss-easy-import": "^4.0.0",
+        "postcss-font-grabber": "^3.0.2",
         "postcss-scss": "^4.0.4",
-        "sass": "^1.52.3",
+        "sass": "^1.53.0",
         "tailwindcss": "^3.1.4",
         "typescript": "^4.7.4"
     }
